logs/plugins/s/simple-show-hide-content/asyncify-boot/error.log
file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:325
        throw new Error($, { cause: h });
              ^

Error: [09-Jul-2025 23:50:43 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[09-Jul-2025 23:50:51 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[09-Jul-2025 23:51:00 UTC] PHP Fatal error:  Uncaught TypeError: error_reporting(): Argument #1 ($error_level) must be of type ?int, string given in /wordpress/wp-content/plugins/super-easy-testimonials/index.php:2
Stack trace:
#0 /wordpress/wp-content/plugins/super-easy-testimonials/index.php(2): error_reporting('E_ALL')
#1 /wordpress/wp-admin/includes/plugin.php(2387): include_once('/wordpress/wp-c...')
#2 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('super-easy-test...')
#3 /internal/eval.php(20): activate_plugin('super-easy-test...')
#4 {main}
  thrown in /wordpress/wp-content/plugins/super-easy-testimonials/index.php on line 2
[09-Jul-2025 23:51:43 UTC] PHP Fatal error:  Uncaught Error: Non-static method RandomPosts::install_post_plugin_library() cannot be called statically in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php:48
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('random-posts-pl...')
#2 /internal/eval.php(20): activate_plugin('random-posts-pl...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php on line 48
[09-Jul-2025 23:51:51 UTC] PHP Fatal error:  Uncaught Error: Non-static method RandomPosts::install_post_plugin_library() cannot be called statically in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php:48
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('random-posts-pl...')
#2 /internal/eval.php(20): activate_plugin('random-posts-pl...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php on line 48
[09-Jul-2025 23:51:59 UTC] PHP Fatal error:  Uncaught Error: Non-static method RandomPosts::install_post_plugin_library() cannot be called statically in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php:48
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('random-posts-pl...')
#2 /internal/eval.php(20): activate_plugin('random-posts-pl...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/random-posts-plugin/random-posts.php on line 48
[09-Jul-2025 23:52:08 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function create_function() in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php:163
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('simple-recent-p...')
#2 /internal/eval.php(20): activate_plugin('simple-recent-p...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php on line 163
[09-Jul-2025 23:52:15 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function create_function() in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php:163
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('simple-recent-p...')
#2 /internal/eval.php(20): activate_plugin('simple-recent-p...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php on line 163
[09-Jul-2025 23:52:23 UTC] PHP Fatal error:  Uncaught Error: Call to undefined function create_function() in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php:163
Stack trace:
#0 /wordpress/wp-admin/includes/plugin.php(2387): include_once()
#1 /wordpress/wp-admin/includes/plugin.php(673): plugin_sandbox_scrape('simple-recent-p...')
#2 /internal/eval.php(20): activate_plugin('simple-recent-p...')
#3 {main}
  thrown in /wordpress/wp-content/plugins/simple-recent-posts-widget/simple-recent-posts-widget.php on line 163

    at Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:325:15)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async re (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:149:10) {
  [cause]: Error: Error when executing the blueprint step #1 ({"step":"installPlugin","pluginData":{"resource":"wordpress.org/plugins","slug":"simple-show-hide-content"},"options":{"activate":true}}) : Could not download "https://downloads.wordpress.org/plugin/simple-show-hide-content.latest-stable.zip".
  				Check if the URL is correct and the server is reachable.
  				If it is reachable, the server might be blocking the request.
  				Check the browser console and network tabs for more information.
  
  				## Does the console show the error "No 'Access-Control-Allow-Origin' header"?
  
  				This means the server that hosts your file does not allow requests from other sites
  				(cross-origin requests, or CORS).	You need to move the asset to a server that allows
  				cross-origin file downloads. Learn more about CORS at
  				https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS.
  
  				If your file is on GitHub, load it from "raw.githubusercontent.com".
  				Here's how to do that:
  
  				1. Start with the original GitHub URL of the file. For example:
  				https://github.com/username/repository/blob/branch/filename.
  				2. Replace "github.com" with "raw.githubusercontent.com".
  				3. Remove the "/blob/" part of the URL.
  
  				The resulting URL should look like this:
  				https://raw.githubusercontent.com/username/repository/branch/filename
  
  				Error:
  				Error: Could not download "https://downloads.wordpress.org/plugin/simple-show-hide-content.latest-stable.zip"
      at Object.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12093:19)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async ys (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:12196:3)
      at async Object.onBind (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:315:48)
      at async re (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/cli/run-cli-j-geJYS3.js:149:10) {
    [cause]: Error: Could not download "https://downloads.wordpress.org/plugin/simple-show-hide-content.latest-stable.zip".
    				Check if the URL is correct and the server is reachable.
    				If it is reachable, the server might be blocking the request.
    				Check the browser console and network tabs for more information.
    
    				## Does the console show the error "No 'Access-Control-Allow-Origin' header"?
    
    				This means the server that hosts your file does not allow requests from other sites
    				(cross-origin requests, or CORS).	You need to move the asset to a server that allows
    				cross-origin file downloads. Learn more about CORS at
    				https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS.
    
    				If your file is on GitHub, load it from "raw.githubusercontent.com".
    				Here's how to do that:
    
    				1. Start with the original GitHub URL of the file. For example:
    				https://github.com/username/repository/blob/branch/filename.
    				2. Replace "github.com" with "raw.githubusercontent.com".
    				3. Remove the "/blob/" part of the URL.
    
    				The resulting URL should look like this:
    				https://raw.githubusercontent.com/username/repository/branch/filename
    
    				Error:
    				Error: Could not download "https://downloads.wordpress.org/plugin/simple-show-hide-content.latest-stable.zip"
        at Ct.resolve (file:///home/runner/work/playground-tester/playground-tester/node_modules/@wp-playground/blueprints/index.js:1129:13)
        at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
        at async _.run (file:///home/runner/work/playground-tester/playground-tester/node_modules/@php-wasm/util/index.js:45:14)
  }
}

Node.js v23.11.0
